--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFraga/ueFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFraga/ueFraga.directive.html
@@ -1,6 +1,6 @@
-<wc-fraga-komplettering frage-id="config.frageId">
-  <a id="komplettering_{{config.frageId}}"></a>
-  <wc-form-label-ue config="config.label"></wc-form-label-ue>
-  <ue-render-components config="config.components" model="model" />
-  <wc-inline-komplettering frage-id="config.frageId"></wc-inline-komplettering>
+<wc-fraga-komplettering frage-id="::config.frageId">
+  <a id="komplettering_{{::config.frageId}}"></a>
+  <wc-form-label-ue config="::config.label"></wc-form-label-ue>
+  <ue-render-components config="::config.components" model="::model" />
+  <wc-inline-komplettering frage-id="::config.frageId"></wc-inline-komplettering>
 </wc-fraga-komplettering>
