--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -1,5 +1,5 @@
 <div wc-date-period-manager model="model" class="sjukskrivningar">
-  <wc-form-label-ue config="config.label"></wc-form-label-ue>
+  <wc-form-label-ue config="::config.label"></wc-form-label-ue>
 
   <wc-alert-message id="lastEffectiveDateNoticeText" alert-severity="info" ng-if="lastEffectiveDateNoticeText">
     {{lastEffectiveDateNoticeText}}
@@ -21,17 +21,17 @@
                        validations="validation.messagesByField[config.modelProp]"
                        warnings="validation.warningMessagesByField[config.modelProp]">
 
-    <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in config.fields">
+    <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in ::config.fields">
       <div class="row">
         <div class="clearfix">
           <div class="col-vlg-auto col-lg-12 col-md-4 col-sm-12">
             <label class="big-checkbox-label checkbox-inline">
               <input class="big-checkbox" type="checkbox" ng-model="viewstate.periods[field].checked"
                      ng-change="viewstate.updateCheckBox(field); validate()">
-              <span dynamic-label key="{{config.code}}.{{field}}.RBK"></span>
+              <span dynamic-label key="{{::config.code}}.{{::field}}.RBK"></span>
             </label>
-            <span wc-help-chevron help-text-key="{{config.code}}.{{field}}.HLP"></span>
-            <span wc-help-chevron-text help-text-key="{{config.code}}.{{field}}.HLP"></span>
+            <span wc-help-chevron help-text-key="{{::config.code}}.{{::field}}.HLP"></span>
+            <span wc-help-chevron-text help-text-key="{{::config.code}}.{{::field}}.HLP"></span>
           </div>
           <div class="clearfix invisible-vlg visible-lg-block visible-sm-block"></div>
           <div class="col-vlg-auto col-vlg-pull-right">
@@ -40,8 +40,8 @@
                         col-md-8
                         col-sm-12">
               <div class="sjukskrivningar_period">
-                <label for="{{config.modelProp}}-{{field}}-from">från och med</label>
-                <span wc-date-period-field model="model" field="{{config.modelProp}}" index="{{field}}" type="from"
+                <label for="{{::config.modelProp}}-{{::field}}-from">från och med</label>
+                <span wc-date-period-field model="::model" field="{{::config.modelProp}}" index="{{::field}}" type="from"
                       on-blur="validate()" ng-class="{'fielderror' : hasValidationError(field, 'from')}"></span>
               </div>
               <div class="clearfix"></div>
@@ -51,8 +51,8 @@
                         col-md-12
                         col-sm-12">
               <div class="sjukskrivningar_period">
-                <label for="{{config.modelProp}}-{{field}}-tom">till och med</label>
-                <span wc-date-period-field model="model" field="{{config.modelProp}}" index="{{field}}" type="tom"
+                <label for="{{::config.modelProp}}-{{::field}}-tom">till och med</label>
+                <span wc-date-period-field model="::model" field="{{::config.modelProp}}" index="{{::field}}" type="tom"
                       on-blur="validate()" ng-class="{'fielderror' : hasValidationError(field, 'tom')}"></span>
               </div>
             </div>
