--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
@@ -1,7 +1,7 @@
 <span class="inline-block">
   <span class="wc-datepicker-wrapper input-group">
-    <input id="{{domId}}"
-           name="{{domId}}"
+    <input id="{{::domId}}"
+           name="{{::domId}}"
            type="text"
            class="form-control"
            ng-class="{'text-invalid': invalid}"
@@ -9,17 +9,17 @@
            is-open="pickerState.isOpen"
            maxlength="10"
            wc-set-date-on-close
-           uib-datepicker-popup="{{format}}"
+           uib-datepicker-popup="{{::format}}"
            popup-placement="auto right"
-           max-date="{{maxDate}}"
-           min-date="{{minDate}}"
+           max-date="{{::maxDate}}"
+           min-date="{{::minDate}}"
            ng-model-options="{ allowInvalid: true }"
            datepicker-options="dateOptions"
            ng-blur="onDatepickerInputFieldBlur()"
            wc-blur-on-enter
            wc-date-picker-field-input/>
     <span class="input-group-btn">
-      <button type="button" id="{{domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
+      <button type="button" id="{{::domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
     </span>
   </span>
 </span>
