--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
@@ -1,8 +1,10 @@
-<div ng-attr-id="{{alertId | uvDomIdFilter}}" class="text-8-lines alert alert-{{alertSeverity}}" ng-class="{'alert-warning': alertSeverity === 'sekretess'}">
-  <i ng-if="alertSeverity === 'info'" class="material-icons">info_outline</i>
-  <i ng-if="alertSeverity === 'warning'" class="material-icons">warning</i>
-  <i ng-if="alertSeverity === 'sekretess'" class="material-icons">security</i>
-  <i ng-if="alertSeverity === 'danger'" class="material-icons">error_outline</i>
-  <span ng-if="alertMessageId" dynamic-label key="{{alertMessageId}}" class="multiline"></span>
+<div ng-attr-id="{{alertId | uvDomIdFilter}}" class="text-8-lines alert alert-{{::alertSeverity}}" ng-class="::{'alert-warning': alertSeverity === 'sekretess'}">
+  <div ng-switch="::alertSeverity">
+    <i ng-switch-when="info" class="material-icons">info_outline</i>
+    <i ng-switch-when="warning" class="material-icons">warning</i>
+    <i ng-switch-when="sekretess" class="material-icons">security</i>
+    <i ng-switch-when="danger" class="material-icons">error_outline</i>
+  </div>
+  <span dynamic-label key="{{alertMessageId}}" class="multiline"></span>
   <ng-transclude></ng-transclude>
 </div>
