--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -1,11 +1,13 @@
 <div class="form-horizontal">
-  <wc-form-label-ue config="config.label"></wc-form-label-ue>
-  <div data-ng-repeat="choice in config.choices">
+  <wc-form-label-ue config="::config.label"></wc-form-label-ue>
+  <div data-ng-repeat="choice in ::config.choices">
     <label class="big-checkbox-label checkbox-inline">
-      <input id="{{config.modelProp}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]">
-      <span dynamic-label key="{{config.code}}.{{choice}}.RBK"></span>
+      <input id="{{::config.modelProp}}-{{::choice}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]">
+      <span dynamic-label key="{{::config.code}}.{{::choice}}.RBK"></span>
     </label>
-    <span wc-help-chevron help-text-key="{{config.code}}.{{choice}}.HLP"></span>
-    <span wc-help-chevron-text help-text-key="{{config.code}}.{{choice}}.HLP"></span>
+    <div ng-if="::config.enableHelp">
+      <span wc-help-chevron help-text-key="{{::config.code}}.{{::choice}}.HLP"></span>
+      <span wc-help-chevron-text help-text-key="{{::config.code}}.{{::choice}}.HLP"></span>
+    </div>
   </div>
 </div>
