--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
@@ -1,12 +1,14 @@
-<div>
-  <a id="anchor-{{config.categoryName}}" name="anchor.{{config.categoryName}}"></a>
-  <div wc-field
-       field-dynamic-label="KAT_{{config.category}}.RBK"
-       field-help-text="KAT_{{config.category}}.HLP"
-       field-has-errors="formState.viewState.common.validation.messagesGrouped[config.categoryName]"
-       field-required="{{config.required}}"
-       class="field-fade">
-    <ue-render-components config="config.components" model="model" />
+<div class="intyg-block clearfix">
+  <a id="anchor-{{::config.categoryName}}" name="anchor.{{::config.categoryName}}"></a>
+  <div class="intyg-block__titlerow">
+    <h3 class="intyg-block__heading">
+      <span dynamic-label key="KAT_{{::config.category}}.RBK"></span>
+      <span class="required">{{::config.required ? '*' : ''}}</span>
+    </h3>
+    <span wc-help-chevron help-text-key="KAT_{{::config.category}}.HLP"></span>
+    <span wc-help-chevron-text help-text-key="KAT_{{::config.category}}.HLP"></span>
   </div>
+  <span class="intyg-block__content">
+    <ue-render-components config="::config.components" model="::model" />
+  </span>
 </div>
-
