--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <div>
-        <wc-form-label-ue config="::config.label"></wc-form-label-ue>
+        <ue-form-label config="::config.label"></ue-form-label>
     </div>
 
     <wc-validation-group field-type="radio-group"
