--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -1,5 +1,5 @@
 <div wc-date-period-manager model="model" class="sjukskrivningar">
-  <wc-form-label-ue config="::config.label"></wc-form-label-ue>
+  <ue-form-label config="::config.label"></ue-form-label>
 
   <wc-alert-message id="lastEffectiveDateNoticeText" alert-severity="info" ng-if="lastEffectiveDateNoticeText">
     {{lastEffectiveDateNoticeText}}
