--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -4,7 +4,7 @@
                        warnings="validation.warningMessagesByField[config.modelProp.toLowerCase()]"
                        validations="validation.messagesByField[config.modelProp.toLowerCase()]">
   <div class="input-full" ng-class="::{'indent' : config.indent, 'bold' : config.bold}">
-    <wc-form-label-ue config="::config.label"></wc-form-label-ue>
+    <ue-form-label config="::config.label"></ue-form-label>
     <div>
       <input id="{{::config.modelProp}}" type="text" class="form-control" ng-disabled="::config.disabled" ng-model="model[config.modelProp]"
              ng-class="::{ 'input-{{config.size}}': config.size }" maxlength="{{::config.htmlMaxlength || 3500}}">
