--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
@@ -1,12 +1,12 @@
 <div class="intyg-block clearfix">
-  <a id="anchor-{{::config.categoryName}}" name="anchor.{{::config.categoryName}}"></a>
+  <a id="anchor-{{::config.categoryId}}" name="anchor.{{::config.categoryId}}"></a>
   <div class="intyg-block__titlerow">
     <h3 class="intyg-block__heading">
-      <span dynamic-label key="KAT_{{::config.category}}.RBK"></span>
-      <span class="required">{{::config.required ? '*' : ''}}</span>
+      <span dynamic-label key="{{::config.label.key}}"></span>
+      <span class="required">{{::config.label.required ? '*' : ''}}</span>
     </h3>
-    <span wc-help-chevron help-text-key="KAT_{{::config.category}}.HLP"></span>
-    <span wc-help-chevron-text help-text-key="KAT_{{::config.category}}.HLP"></span>
+    <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
+    <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
   </div>
   <span class="intyg-block__content">
     <ue-render-components config="::config.components" model="::model" />
