INTYG-5302: Grundstyling utkastvyn.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFraga/ueFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFraga/ueFraga.directive.scss
@@ -7,6 +7,11 @@ ue-fraga {
     margin: 0;
   }
 
+  h4 {
+    @extend %wc-typo-05;
+    color: $wc-color-08;
+  }
+
   .fraga-body {
     background: $uv-intyg-body-bg;
   }
