--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
@@ -37,16 +37,8 @@ a {
   max-width: 1024px;
 }
 
-.edit-form {
-  max-width: 1024px;
-}
-
 .collapsed {
   margin-top: 150px;
-}
-
-.certificate {
-  max-width: 1024px;
 }
 
 @media screen and (min-width: 768px) {
@@ -56,12 +48,6 @@ a {
   }
 }
 
-@media (min-width: 768px) {
-  .form-inline .radio input[type=radio] .big-radio,
-  .form-inline .checkbox input[type=checkbox] .big-checkbox {
-    vertical-align: bottom;
-  }
-}
 
 .revoked-certificate {
   color: $wc-color-22;
@@ -85,20 +71,10 @@ a {
       color: $wc-color-22;
     }
   }
-  .intyg-body .intyg-block .title {
-    color: $wc-color-22;
-  }
-
-  .intyg-block h4.intyg-field-number {
-    color: $wc-color-22;
-  }
   .alert-info {
     display: none;
   }
 
-  .intyg-block a {
-    color: $wc-color-22;
-  }
 }
 
 .intyg-body .validation {
@@ -119,10 +95,6 @@ td .last-validation .validation, .last-validation td .validation {
 
 .webcert-multicol .certificate {
   max-width: 1000px;
-}
-
-.legacy-intyg .intyg-block__content {
-  padding: 12px 14px 12px 14px;
 }
 
 .indent {
@@ -178,33 +150,12 @@ label {
   vertical-align: middle;
 }
 
-label.big-radio-label input[type=radio].big-radio, label.big-checkbox-label input[type=checkbox].big-checkbox {
-  margin-left: -25px;
-  margin-top: -1px;
-}
-
-label.big-radio-label, label.big-checkbox-label {
-  padding-left: 25px;
-  line-height: 22px;
-}
-
 //Larger structures used in multiple places
 .edit-form {
 
   .form-inline input[type=checkbox] {
     margin: -1px 0 0;
     vertical-align: middle;
-  }
-  h4 {
-    font-size: 14px;
-    line-height: 20px;
-  }
-  .intyg-block .checkbox input[type=checkbox] {
-    margin-left: -20px;
-  }
-  .intyg-block .checkbox.big-checkbox-label input[type=checkbox],
-  .intyg-block .checkbox-inline.big-checkbox-label input[type=checkbox] {
-    margin-left: -29px;
   }
 
   .categorykmplt, .groupkomplettering {
@@ -263,7 +214,8 @@ label.big-radio-label, label.big-checkbox-label {
   }
 }
 
-.intyg-block {
+/*
+.card {
   margin: 0 0px 0px 0;
   padding-bottom: 20px;
   border-radius: 6px 6px 6px 6px;
@@ -271,7 +223,6 @@ label.big-radio-label, label.big-checkbox-label {
 
   .formly-field {
     &:not(:nth-last-child(2)) {
-      /*padding-bottom: 20px;*/
       &.small-gap {
         padding-bottom: 5px;
       }
@@ -321,15 +272,7 @@ label.big-radio-label, label.big-checkbox-label {
       white-space: nowrap;
     }
   }
-  .checkbox {
-    padding-left: 20px;
-  }
-  .checkbox.big-checkbox-label, .checkbox-inline.big-checkbox-label {
-    padding-left: 29px;
-  }
-  .checkbox-columns {
-    margin-left: 0;
-  }
+
   .intyg-field-blank {
     color: $wc-color-16;
   }
@@ -389,7 +332,7 @@ label.big-radio-label, label.big-checkbox-label {
     width: 100% !important;
   }
 }
-
+*/
 /* Intyg-edit menu header collapse animation */
 
 %transition-with-ease-out {
