--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -29,7 +29,9 @@ $wc-color-09: #6A6A6A;
 $wc-color-22: #9A9A9A;
 $wc-color-23: #A9B2BD;
 $wc-color-15: #CDCED6;
+$wc-color-27: #D7D7DD;
 $wc-color-13: #E1E1E1;
+$wc-color-28: #E9EAED;
 $wc-color-20: #F2F2F2;
 $wc-color-24: #F5F6F7;
 $wc-color-00: #FFFFFF;
@@ -45,7 +47,6 @@ $wc-color-05: #765A20;
 $wc-color-12: #F6BB42;
 $wc-color-18: #FFC794;
 $wc-color-02: #ffebba;
-
 
 $wc-color-19: #292F4F;
 $wc-color-17: #3D4260;
