--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/card.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/card.scss
@@ -1,5 +1,5 @@
 /*!
- * Copyright (C) 2017 Inera AB (http://www.inera.se)
+ * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -17,6 +17,9 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.wc-fraga {
-  padding: 14px 28px 14px 28px;
+.card {
+  display: block;
+  background-color: $wc-color-00;
+  margin-bottom: 14px;
+  border-radius: 4px;
 }
