--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
@@ -1,14 +1,14 @@
-<div class="intyg-block clearfix">
+<div class="card clearfix">
   <a id="anchor-{{::config.categoryId}}" name="anchor.{{::config.categoryId}}"></a>
-  <div class="intyg-block__titlerow">
-    <h3 class="intyg-block__heading">
+  <div class="ue-kategori__heading">
+    <h3>
       <span dynamic-label key="{{::config.label.key}}"></span>
       <span class="required">{{::config.label.required ? '*' : ''}}</span>
+      <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
     </h3>
-    <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
     <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
   </div>
-  <span class="intyg-block__content">
+  <span class="">
     <ue-render-components config="::config.components" model="::model" />
   </span>
 </div>
