INTYG-5367:  debounce på textfield och textarea, validering och save tvingar commit

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKategori/ueKategori.directive.html
@@ -9,6 +9,6 @@
     <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
   </div>
   <span class="">
-    <ue-render-components config="::config.components" model="::model" />
+    <ue-render-components form="::form" config="::config.components" model="::model" />
   </span>
 </div>
