--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
@@ -2,6 +2,7 @@ wc-fmb-panel-tab {
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
 
 
   .fmb-diagnos-row {
