--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -1,1 +1,11 @@
-Här är Tips & hjälp tab direktivet
+<div class="tab-content-title-row">Tip och hjälprubrik</div>
+
+
+
+<wc-support-panel-scrollable-body>
+
+  <div>Här är lite tips och hjälp för detta</div>
+  <p>Här är lite tips och hjälp för detta</p>
+  <p>Här är lite tips och hjälp för detta</p>
+
+</wc-support-panel-scrollable-body>
