--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -6,7 +6,8 @@
   </span>
 </div>
 
-<div class="tab-content-scrollable-body">
+<wc-support-panel-scrollable-body>
+
   <span ng-repeat="d in fmb.diagnoses" ng-if="d === vm.activeDiagnose">
      <wc-alert-message alert-message-id="warning" ng-if="d.diagnosKod !== d.originalDiagnosKod">
       <span id="fmb_diagnos_not_in_fmb_alert">Det FMB-stöd som visas är för koden {{d.diagnosKod}} - {{d.diagnosBeskrivning}}.</span>
@@ -18,22 +19,22 @@
           <span dynamic-label key="{{'fmb.' + item.heading}}"></span>
         </h4>
         <section class="fmb-section" id="fmb_text_{{item.heading}}" ng-if="item.text">{{item.text}}</section>
-        <section class="fmb-section" id="fm{{item.text}}f="item.list">
+        <section class="fmb-section" id="fm{{item.text}}f=" item.list">
           <ul class="fmb-bullet-list" ng-repeat="bullet in item.list track by $index">
             <li id="fmb_bullet_{{item.heading}}_{{$index}}">{{bullet}}</li>
           </ul>
         </section>
       </div>
     </div>
-
-
   </span>
 
-  <!-- in case none of the diagnoses had any info to show -->
-  <span ng-if="vm.noData">Inga fmb finns alls för nån av diagnoserna</span>
-  <!-- finns massa andra meddelanden som kan visas också -->
-</div>
+    <!-- in case none of the diagnoses had any info to show -->
+    <span ng-if="vm.noData">Inga fmb finns alls för nån av diagnoserna</span>
+    <!-- finns massa andra meddelanden som kan visas också -->
+
+</wc-support-panel-scrollable-body>
+
 <div class="fmb-footer">
   <span>Information om Socialstyrelsens försäkringsmedicinska beslutsstöd (länk)</span>
-  <img src="path to sos logo">
+  <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen_icon16.png">
 </div>
