--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
@@ -17,15 +17,96 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.big-checkbox {
+/*
+Checkbox/Radio
+SMALL
+*/
+
+input[type=radio] {
+  margin-top: 3px;
+  cursor: pointer;
+}
+
+input[type=checkbox] {
+  margin-top: 3px;
+  cursor: pointer;
+}
+
+.radio {
+  cursor: pointer;
+  &.disabled {
+    color: $wc-color-09;
+    cursor: not-allowed;
+  }
+}
+
+.checkbox {
+  cursor: pointer;
+  &.disabled {
+    color: $wc-color-09;
+    cursor: not-allowed;
+  }
+}
+
+label {
+  &.checkbox {
+    font-weight: normal;
+    margin-top: 0;
+    + label.checkbox {
+      font-weight: normal;
+      margin-top: 0;
+    }
+  }
+  &.radio {
+    font-weight: normal;
+    margin-top: 0;
+    + label.radio {
+      font-weight: normal;
+      margin-top: 0;
+    }
+  }
+}
+
+.card {
+  .checkbox {
+    padding-left: 20px;
+  }
+  .checkbox-columns {
+    margin-left: 0;
+  }
+}
+
+.checkbox input[type=checkbox] {
+  margin-left: -20px;
+}
+
+.edit-form {
+  .form-inline input[type=checkbox] {
+    margin: -1px 0 0;
+    vertical-align: middle;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .form-inline .radio input[type=radio],
+  .form-inline .checkbox input[type=checkbox] {
+    vertical-align: middle;
+  }
+}
+
+/*
+Checkbox/Radio
+BIG
+*/
+
+.big-checkbox, .big-radio {
   width: 22px;
   height: 22px;
 }
 
 .big-radio {
-  width: 22px;
-  height: 22px;
   margin-top: 0 !important;
+  margin-right: 10px;
 }
 
 label.big-radio-label input[type=radio].big-radio, label.big-checkbox-label input[type=checkbox].big-checkbox {
@@ -38,45 +119,12 @@ label.big-radio-label, label.big-checkbox-label {
   line-height: 22px;
 }
 
+.makulera-choices .big-radio-label {
+  margin-top: 10px;
+}
+
 @media (min-width: 768px) {
-  .form-inline .radio input[type=radio] .big-radio,
-  .form-inline .checkbox input[type=checkbox] .big-checkbox {
-    vertical-align: bottom;
-  }
-}
-
-.card {
-  .checkbox {
-    padding-left: 20px;
-  }
-  .checkbox.big-checkbox-label, .checkbox-inline.big-checkbox-label {
-    padding-left: 29px;
-  }
-  .checkbox-columns {
-    margin-left: 0;
-  }
-}
-
-.checkbox input[type=checkbox] {
-  margin-left: -20px;
-}
-.checkbox.big-checkbox-label input[type=checkbox],
-.intyg-block .checkbox-inline.big-checkbox-label input[type=checkbox] {
-  margin-left: -29px;
-}
-
-.edit-form {
-
-  .form-inline input[type=checkbox] {
-    margin: -1px 0 0;
-    vertical-align: middle;
-  }
-
-  .checkbox input[type=checkbox] {
-    margin-left: -20px;
-  }
-  .checkbox.big-checkbox-label input[type=checkbox],
-  .intyg-block .checkbox-inline.big-checkbox-label input[type=checkbox] {
-    margin-left: -29px;
+  .form-inline .radio input[type=radio].big-radio {
+    margin-right: 10px;
   }
 }
