--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -2,7 +2,7 @@
   <div class="tag" ng-if="!hideHeader" >
     <span class="lastevent-header" message key="listtable.headers.latestevent"></span>
     <span ng-if="!maxEvents" id="eventsshown">{{eventsShown(filteredEvents, isCollapsedArchive)}}</span>
-    <ng-include ng-if="showMoreButtonLocation == 'top'" class="pull-right" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
+    <ng-include ng-if="showMoreButtonLocation === 'top'" class="pull-right" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
     <div style="clear:both"></div>
   </div>
   <div ng-if="filteredEvents.length > 0" ng-attr-id="event-{{certId}}">
@@ -13,7 +13,7 @@
       <latest-events-text class="event-text" ng-attr-id="event-text-{{::certId}}-{{::$index}}" text="info.text" view-cert="viewCert(type, id)"></latest-events-text>
     </div>
   </div>
-  <ng-include ng-if="showMoreButtonLocation == 'bottom'" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
+  <ng-include ng-if="showMoreButtonLocation === 'bottom'" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
   <div ng-if="filteredEvents.length == 0" data-ng-attr-class="certificate-noevents-{{certId}}">
     <div ng-attr-id="event-{{certId}}">{{messageService.getProperty('certificates.events.noevents')}}</div>
   </div>
