DEVENV: Required-stjärnor.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -38,7 +38,7 @@ $wc-color-00: #FFFFFF;
 
 $wc-color-01: #F8BFC5;
 $wc-color-04: #9A303B;
-$wc-color-11: #F06F7D;
+$wc-color-11: #DA4453;
 
 $wc-color-16: #4C7B67;
 $wc-color-10: #37BC9B;
