--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueFormLabel/ueFormLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueFormLabel/ueFormLabel.scss
@@ -17,6 +17,10 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+ue-form-label {
+  position: relative;
+}
+
 .wc-fraga .formly-field:not(:first-child) .wcFormLabel {
   padding-top: 10px;
 }
