--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -492,9 +492,11 @@
 
   .required {
     color: $wc-color-11;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: normal;
     font-style: normal;
+    position: absolute;
+    left: -14px;
   }
 
   /* Not used? */
